--- a/Venues/Resources/Credentials.plist
+++ b/Venues/Resources/Credentials.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>secret-key</key>
-	<string>&quot;$2b$10$76APFiNwr0YXKLX6FDCGiuks/TPFnSKkJleMY2uz1AR1EqTK9IODC&quot;</string>
+	<string>$2b$10$76APFiNwr0YXKLX6FDCGiuks/TPFnSKkJleMY2uz1AR1EqTK9IODC</string>
 </dict>
 </plist>
